--- a/homepage.html
+++ b/homepage.html
@@ -54,7 +54,7 @@
             <img src="cafe.png"alt=""width="200px" height="250px">
            <h4>Student Center</h4>
 
-        </div>
+        </div><br>
   </div>
 
 
